Initial text on other kinds of tonics.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -194,6 +194,10 @@
   \headlesscite[70--77]{levine:1995}. We will return to this equivalence
   between chords and scales in Chapter 4.}
 
+\fntext{tfe-2}{%
+  % xxx check this chapter
+  The name of the transformation \textsc{ResI} is inspired by Steven Rings's use of
+  the transformation ``ResC'' in the xxx chapter of \headlesscite{rings:2011}.}
 
 %}}}
 
