Replace \cdot with \odot for function composiiton.

--- a/ch2.tex
+++ b/ch2.tex
@@ -544,7 +544,7 @@ transformation from V\tsup{7} chords to ii\tsup{7} chords:
   Y = (\,y_r, y_t, y_s) = (x_r + 5, x_s - 2, x_t - 1) \in \Smin
 \end{displaymath}}%
 %
-EC is of course equivalent to TF $\cdot$ \textsc{7th} $\cdot$
+EC is of course equivalent to TF $\odot$ \textsc{7th} $\odot$
 \textsc{3rd}, but only when the starting chord is a V\tsup{7} chord (a member
 of $\Sdom$). In \tf space, EC can be represented by following one arrow to the
 right and two arrows downward. The structure of the space immediately shows
@@ -558,7 +558,7 @@ the lowered seventh.\fn{tft-6} The intution that this \h{Bb7} is in fact a
 stable harmony, rather than a descending-fifth transposition of \h{F7}, can be
 captured in our transformational labels. Instead of labeling this progression
 \mbox{\h{F7} $\xrightarrow{T_5}$ \h{Bb7}}, we can instead label it as
-\mbox{\h{F7} $\xrightarrow{\mathrm{TF} \cdot\ \text{\textsc{7th}}}$ \h{Bb7}};
+\mbox{\h{F7} $\xrightarrow{\mathrm{TF}\ \odot\ \text{\textsc{7th}}}$ \h{Bb7}};
 this designation expresses the notion that we hear the \h{Bb7} chord as a
 resolution to a stable chord (the TF transformation) that has merely been
 inflected with the lowered seventh (the \textsc{7th} transformation).
@@ -568,7 +568,7 @@ transformation network:
 \begin{center}
   \h{Em7b5} \TFarrow\ \h{A7} \ECarrow\
   \h{Dm7}   \TFarrow\ \h{G7} \ECarrow\
-  \h{Cm7}   \TFarrow\ \h{F7} $\xrightarrow{\mathrm{TF} \cdot\ \text{\textsc{7th}}}$
+  \h{Cm7}   \TFarrow\ \h{F7} $\xrightarrow{\mathrm{TF}\ \odot\ \text{\textsc{7th}}}$
   \h{Bb7}
 \end{center}
 
@@ -586,7 +586,7 @@ earlier descending fifths pattern:
 \end{center}
 
 \noindent (Here, EC\tsub{T} is the tritone-substituted variant of EC,
-equivalent to \tft $\cdot$ \textsc{7th} $\cdot$ \textsc{3rd}, applied to a
+equivalent to \tft $\odot$ \textsc{7th} $\odot$ \textsc{3rd}, applied to a
 dominant seventh chord.) Once this sequence arrives on \h{Gm7} as the ii chord
 of the tonic F, there is a \tfo progression in the home key. After the
 resolution in m.~11, the progression moves backwards through fifths space to
@@ -813,6 +813,7 @@ the difference between \h{Bb7} as a stable resolution (as it is in m.~5 of
 ``Solar'', for example).
 
 % here, steve rings, tonal qualia, etc.
+
 
 
 
