Finish draft of generic spaces text.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -195,9 +195,16 @@
   between chords and scales in Chapter 4.}
 
 \fntext{tfe-2}{%
-  % xxx check this chapter
   The name of the transformation \textsc{ResI} is inspired by Steven Rings's use of
-  the transformation ``ResC'' in the xxx chapter of \headlesscite{rings:2011}.}
+  the transformation ``ResC'' in the first chapter of \headlesscite[25-27]{rings:2011}.}
+
+\fntext{tfe-3}{%
+  In fact, we could make similar statements for all of the sets developed in
+  this chapter: \Smin would then become ``the set of minor-minor seventh
+  chords acting as \sd2, \sd4, and \sd1 in some key'' (loosely speaking; the
+  necessary mathematics are easy enough to provide). In most cases, however,
+  this level of precision is unnecessary, since the quality of the chord
+  uniquely identifies its function.}
 
 %}}}
 
