Stub next section (for tomorrow).

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -206,6 +206,8 @@
   this level of precision is unnecessary, since the quality of the chord
   uniquely identifies its function.}
 
+\fntext{tfe-4}{%
+  For more on diatonic systems generally, see \cite{cloughmyerson:1985}.}
 %}}}
 
 %%% Local Variables: %%%
