--- a/ch2.tex
+++ b/ch2.tex
@@ -18,7 +18,7 @@ occasion to return to the diatonic space of chapter 1 to see how they might be
 enhanced with the chromatic spaces introduced here.
 
 % xxx this title is stupid
-\section{\tf\ Space: An Initial Pass}
+\section{\tf Space: An Initial Pass}
 \label{sec:tf-space-1}
 %{{{
 
@@ -358,7 +358,8 @@ the chord symbols.\fn{tf-13}
 
 
 
-\section{\tf\ Space: Tritone Substitutions}
+\section{\tf Space: Tritone Substitutions}
+\label{sec:tf-space-tritones}
 %{{{
 
 \subsection{Formalism}
@@ -913,8 +914,40 @@ realize our intuitions about the short passage in ``Blues for Alice'' (mm.~4--6)
 
 %}}}
 
+\subsection{Interaction with Diatonic Spaces}
 
-% interaction with diatonic spaces
+Though our study of other kinds of tonic chords has taken us relatively far
+afield from our starting point, these extensions are not necessary to
+understand most tonal jazz. For many purposes, the conventional space
+developed in Sections \ref{sec:tf-space-1} and \ref{sec:tf-space-tritones}
+will be sufficient. What is missing in our treatment so far, though, is the
+concept of a global tonic. This dissertation, after all, is interested in
+tonal jazz, and most of this music (and certainly all of the examples we have
+seen in this chapter) is in a key. To this point, we have only acknowledged
+this fact simply by mentioning the key of a particular tune in our analytical
+commentary, or circling the tonic chord in a representation of the space.
+Defining \tf space as a fully chromatic space has many advantages: it is rare
+that every chord in a tune can be understood in a single key, and it is
+convenient not to have to continually switch between diatonic collections.
+Moreover, chromatic spaces are much more regular than their diatonic
+counterparts: chromatic step size is consistent, while diatonic step size
+varies between one and two half steps.\fn{tfe-4}
+
+Still, given the work we did in Section \ref{sec:diatonic-spaces} on diatonic
+transformational systems, it seems wise to consider what a diatonic \tf space
+might look like. We first made the space chromatic by arranging individual
+\tfo progressions in descending fifths (recall Figure
+\ref{tf:tf-circle-fifths}). We could instead wrap the space around the
+\emph{diatonic} circle of fifths, as shown in Figure \ref{tfe:tf-diatonic-fifths}.
+
+\begin{figure}[tbp]
+  \centerGraphic{eps/xxx.pdf}
+  \caption{\tf space, conformed to the diatonic circle of fifths.}
+  \label{tfe:tf-diatonic-fifths}
+\end{figure}
+
+
+
 
 
 %}}} extensions
