--- a/diss.bib
+++ b/diss.bib
@@ -141,6 +141,17 @@ Theory} }
   year        = {1998}
 }
 
+@article{cloughmyerson:1985,
+  author      = {Clough, John and Myerson, Gerald},
+  title       = {Variety and Multiplicity in Diatonic Systems},
+  journal     = {Journal of Music Theory},
+  volume      = {29},
+  number      = {2},
+  pages       = {249--70},
+  year        = {1985},
+  issue       = {Autumn}
+}
+
 @article{cohn:1996,
   author      = {Cohn, Richard},
   title       = {Maximally Smooth Cycles, Hexatonic Systems, and the Analysis
