Add text on diatonic ii-V space, plus "Ceora."
(This text is pretty rough, and will need to be rewritten.)

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -208,6 +208,21 @@
 
 \fntext{tfe-4}{%
   For more on diatonic systems generally, see \cite{cloughmyerson:1985}.}
+
+\fntext{tfe-5}{%
+  These transformations are all relatively parsimonious, and seem in some way
+  related to the \slideS transformation introduced above. We will delay a
+  discussion of these parsimonious aspects of these transformations more
+  generally until the next chapter.}
+
+
+\fntext{tfe-6}{%
+  ``Ceora'' is perhaps even more diatonic than this space implies, since \h{CM7}
+  and \h{BbM7} never appear in the music, while \h{DbM7} does. Thus the
+  chord qualities strongly suggest \h{Ab} major: I and IV (\Aflat\ and \Dflat)
+  both appear as major sevenths, while ii and iii (\Bflat\ and C) appear only
+  as minor seventh chords (unstable ii\tsup{7} chords).}
+
 %}}}
 
 %%% Local Variables: %%%
