Add two examples of diatonic ii-V space.

--- a/ch2.tex
+++ b/ch2.tex
@@ -950,8 +950,9 @@ becomes \h{FM7} $\xrightarrow{7\text{\textsc{th}}\ \odot\ T_1}$ \h{Fs7}; and the
 $T_5$ linking the dominants becomes $T_6$.\fn{tfe-5}
 
 \begin{figure}[tbp]
-  \centerGraphic{eps/xxx.pdf}
-  \caption{\tf space, conformed to the white-key diatonic circle of fifths.}
+  \centerGraphic{eps/ch2/tf-diatonic-fifths.pdf}
+  \caption{A portion of \tf space, conformed to the white-key diatonic circle
+    of fifths.}
   \label{tfe:tf-diatonic-fifths}
 \end{figure}
 
@@ -1000,7 +1001,7 @@ equivalent to the transformation \slideS: the detail in Figure
 \ref{tfe:diatonic-space-detail} helps make this clear.
 
 \begin{figure}[htbp]
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic[width=30em]{eps/ch2/diatonic-space-detail.pdf}
   \caption{Detail of diatonic \tf space, showing the \textsc{slide}\tsup{7}
     transformation between key centers related by half-step.}
   \label{tfe:diatonic-space-detail}
@@ -1022,6 +1023,8 @@ its role, connecting the local key areas of \Dflat\ and C.
   \caption{An analysis of ``Ceora'' in diatonic \tf space.}
   \label{tfe:ceora-space-diatonic}
 \end{figure}
+
+
 
 %}}} extensions
 
