Minor updates, graphics for diatonic ii-V space.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -215,6 +215,12 @@
   discussion of these parsimonious aspects of these transformations more
   generally until the next chapter.}
 
+\fntext{tfe-5a}{%
+  This figure has been skewed somewhat to conserve space on the page. If it
+  were drawn in a manner parallel with standard \tf space, a ii\tsup{7} chord
+  would be directly below the I\tsup{7} chord with the same root. As is the case
+  throughout this study, the particular visual representation chosen for a given
+  space does not affect the abstract structure of the space itself. }
 
 \fntext{tfe-6}{%
   ``Ceora'' is perhaps even more diatonic than this space implies, since \h{CM7}
