--- a/ch2.tex
+++ b/ch2.tex
@@ -975,8 +975,8 @@ arrangement into steps means that the key areas used in the tune are adjacent
 in the space; in the chromatic space of Figure \ref{tf:ceora-space-1}, they
 were separated by an intervening fifth.
 
-\begin{figure}[tbp]
-  \centerGraphic{eps/xxx.pdf}
+\begin{figure}[tbh]
+  \centerGraphic{eps/ch2/ab-diatonic-space.pdf}
   \caption{An \Aflat{}-major diatonic \tf space, arranged in descending steps.}
   \label{tfe:ab-diatonic-space}
 \end{figure}
@@ -984,23 +984,28 @@ were separated by an intervening fifth.
 This figure is structurally a bit different than the other spaces we have been
 exploring in this chapter, so it will be helpful to examine it in some detail
 before returning to ``Ceora.'' The arrangement into descending steps means
-that we can no longer align all of the seventh chords sharing a root; instead,
-only the major and minor sevenths are aligned vertically. The key areas in
-this figure are not connected by $T_5$, but instead by $t_6$ (recall our
-discussion of the diatonic transposition operator in Section
-\ref{subsec:inttrans}). Though the diatonic distance is consistent, the
+that we can no longer align all of the seventh chords sharing a root; only the
+major and minor seventh chords sharing a root are adjacent in the
+space.\fn{tfe-5a} The \h{GM7} and \h{Gm7} (ii\tsup{7}/F) chords are close to
+one another, for example, but \h{G7} (V\tsup{7}/C) is farther removed. The key
+areas in this figure are not connected by $T_5$, but instead by $t_6$ (recall
+our discussion of the diatonic transposition operator in Section
+\ref{subsec:inttrans}): all of the roots of the major seventh chords (reading
+down the right side of the figure) are members of the 4-flat diatonic
+collection. Though the diatonic distance between key areas is consistent, the
 chromatic distance varies: there are two points in the space connected by half
 steps rather than whole steps.
 
-As we saw above, the tritone of diatonic space means that all of the
-tranformations spanning it must be combined with $T_1$. Here, the relationship
-between most I\tsup{7} and ii\tsup{7} chords is the transformation
-\textsc{7th}~$\odot$ \textsc{3rd}, but between the keys of \Dflat and C, it is
+As we saw above, the tritone appearing in diatonic space alters the
+transformational structure somewhat: transformations spanning this tritone
+must must be combined with $T_1$. Here, the relationship between most
+I\tsup{7} and ii\tsup{7} chords is the transformation \textsc{7th}~$\odot$
+\textsc{3rd}, but between the keys of \Dflat\ and C (as well as \Aflat\ and G), it is
 \textsc{7th}~$\odot$ \textsc{3rd}~$\odot\ T_1$. This transformation is in fact
 equivalent to the transformation \slideS: the detail in Figure
 \ref{tfe:diatonic-space-detail} helps make this clear.
 
-\begin{figure}[htbp]
+\begin{figure}[tbp]
   \centerGraphic[width=30em]{eps/ch2/diatonic-space-detail.pdf}
   \caption{Detail of diatonic \tf space, showing the \textsc{slide}\tsup{7}
     transformation between key centers related by half-step.}
