More text on Ceora, diatonically.

--- a/ch2.tex
+++ b/ch2.tex
@@ -1016,18 +1016,33 @@ All of ``Ceora'' takes place in a relatively small portion of diatonic \tf
 space; Figure \ref{tfe:ceora-space-diatonic} gives an analysis of the A
 section in this space (the changes can be found in Figure
 \ref{tf:ceora-changes-1}).\fn{tfe-6} The analysis of course looks very similar
-to our analysis in Section \ref{sec:ceora-analysis}, but the key areas does
-not appear so distant from one another, and the global tonic of \Aflat\ is
-clearer. While the purpose of the \slideS transformation in mm.~5--6 of was
-perhaps unclear in chromatic \tf space (it represents quite a large jump in
-Figure \ref{tf:ceora-space-1}), this diatonic stepwise arrangement clarifies
-its role, connecting the local key areas of \Dflat\ and C.
+to our analysis in Section \ref{sec:ceora-analysis}, but the stepwise
+arrangement of the space helps us to show different analytical insights. Moves in
+the space that are relatively close in the chromatic fifths arrangement in
+Figure \ref{tf:ceora-space-1} appear much larger in this arrangement (the move
+from \h{AbM7} to \h{Ebm7}, marked ``4'' in this figure), and vice versa (the
+\slideS from \h{DbM7} to \h{Dm7}, marked ``7'').
 
-
-\begin{figure}[tbp] \centerGraphic{eps/xxx.pdf}
+\begin{figure}[tbh]
+  \centerGraphic{eps/ch2/ceora-space-diatonic.pdf}
   \caption{An analysis of ``Ceora'' in diatonic \tf space.}
   \label{tfe:ceora-space-diatonic}
 \end{figure}
+
+It is worth noting at this point that although we have adapted \tf space to
+show aspects of diatonicism, \tf space is still chromatic. The transformations
+are still defined on ordered triples of mod-12 (not mod-7) integers, and
+nothing in the \tfo progressions themselves has changed. We used the guiding
+influence of a diatonic collection in this section only to choose the key
+centers we showed in particular representation of the space. This use reflects
+the construction of jazz itself; tunes are often globally diatonic (in a key),
+while locally chromatic, using \tfo progressions to tonicize other key areas
+to a much greater extent than is usually seen in classical music. The reason
+for this is largely practical. The head-solos-head form of most jazz means
+that we hear the same progression repeated many times (Morgan's recording of
+``Ceora'' runs about 6\,½ minutes, for example), and using only pitches from the
+\Aflat-major diatonic collection would quickly become boring.
+
 
 
 
