Bad summary paragraph of ch. 2.

--- a/ch2.tex
+++ b/ch2.tex
@@ -621,6 +621,7 @@ space often demand other explanations.
 %}}}
 
 \section{\tf Space: Some Extensions}
+\label{sec:tf-extensions}
 %{{{
 
 \subsection{Minor Tonic Chords}
@@ -1043,8 +1044,20 @@ that we hear the same progression repeated many times (Morgan's recording of
 ``Ceora'' runs about 6\,½ minutes, for example), and using only pitches from the
 \Aflat-major diatonic collection would quickly become boring.
 
+\subsection{Summary}
 
+By using the \tfo as the basis of the transformational spaces developed in
+this chapter, we can now understand a large swath of tonal jazz harmony.
+Because this progression is so ubiquitous, many jazz tunes can be well
+understood using only the spaces here (perhaps with some adaptations, as
+suggested in this final section). Treating chords as ordered triples of root,
+third, and seventh allowed us to define transformations in a way that is still
+valid when the actual form of a chord might differ greatly from instance to
+instance. This is a useful abstraction, and we will continue to use it in the
+next chapter, where we will also consider relationships among our sets of
+ordered triples more generally.
 
+% xxxx need a section on path consistency here (maybe instead of this dumb summary)
 
 %}}} extensions
 
