Add paragraph on path consistency.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -222,12 +222,24 @@
   throughout this study, the particular visual representation chosen for a given
   space does not affect the abstract structure of the space itself. }
 
+\fntext{tfe-5b}{%
+  In our discussion of the diatonic transposition operator in Section
+  \ref{subsec:inttrans}, we defined $t_k$ to be the operation that transposes
+  the root of a chord $k$ steps inside a particular diatonic collection.
+  There, we were interested in a particular 7-element set of chords (with
+  their attendant qualities); here, the root is still transposed in a
+  particular diatonic collection, but the resulting chord is still a major
+  seventh chord.}
+
 \fntext{tfe-6}{%
   ``Ceora'' is perhaps even more diatonic than this space implies, since \h{CM7}
   and \h{BbM7} never appear in the music, while \h{DbM7} does. Thus the
   chord qualities strongly suggest \h{Ab} major: I and IV (\Aflat\ and \Dflat)
   both appear as major sevenths, while ii and iii (\Bflat\ and C) appear only
   as minor seventh chords (unstable ii\tsup{7} chords).}
+
+\fntext{tfe-7}{%
+  Path consistency is described in \cite[25--28]{hook:2007}.}
 
 %}}}
 
